--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   border: 1px solid $color-terciary;
   padding: 1.5rem 6rem;
-  background-color: $color-secondary;
+  background-image: linear-gradient(to left bottom, $color-secondary, darken($color-secondary, 10%));
   transition: all ease-in .06s;
 
   &:hover {
