--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,4 +1,5 @@
 @use 'variables' as *;
+@use "mixin" as *;
 
 * {
   margin: 0;
@@ -8,8 +9,16 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size:47.5%;
   scroll-behavior: smooth;
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(tab-land) {
+    font-size: 56.2%;
+  }
 }
 
 body {
