--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,32 +5,81 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10rem;
-  gap: 6rem;
+  height: 15rem;
   @include container-size;
   padding-bottom: 0;
+  overflow: hidden;
+  padding: 2rem;
 
-  &__nav {
-    display: flex;
-    gap: 4rem;
+  @include respond(tab-port) {
+    height: 10rem;
+    gap: 2rem;
+  }
+
+  &__logo {
+    max-width: 20rem;
+    order: 1;
+    position: absolute;
+    top: 2rem;
+
+    @include respond(tab-port) {
+      position: static;
+      max-width: 30rem;
+      order: 2;
+    }
+  }
+  .nav--1 {
+    order: 2;
 
     a {
-      position: relative;
+      font-size: 1.6rem;
+      padding-inline: .5rem;
+      border-right: 1px solid $color-terciary;
+    }
 
-      &::after {
-        content: '';
-        background-color: $color-terciary;
-        width: 0;
-        height: .1rem;
-        display: block;
-        position: absolute;
-        top: 2.5rem;
-        left: 0;
-        transition: all ease-in 0.1s;
-      }
+  
+    @include respond(tab-port) {
+    }
+  }
 
-      &:hover::after {
-        width: 100%;
+  .nav--2 {
+    order: 3;
+
+    a {
+      font-size: 1.6rem;
+      padding-inline: .5rem;
+    }
+
+    a:not(:last-child) {
+      border-right: 1px solid $color-terciary;
+    }
+    @include respond(tab-port) {
+    }
+  }
+
+  &__nav {
+    display: block;    
+
+    @include respond(desktop) {
+      a {
+        position: relative;
+        font-size: initial;
+
+        &::after {
+          content: '';
+          background-color: $color-terciary;
+          width: 0;
+          height: 0.1rem;
+          display: block;
+          position: absolute;
+          top: 2.5rem;
+          left: 0;
+          transition: all ease-in 0.1s;
+        }
+
+        &:hover::after {
+          width: 100%;
+        }
       }
     }
   }
