--- a/assets/scss/_mixin.scss
+++ b/assets/scss/_mixin.scss
@@ -5,3 +5,49 @@
   margin-inline: auto;
   padding-bottom: 6rem;
 }
+
+// !MÉDIA
+/* 
+-----------------------------------------------. 
+!argumento do $breakpoint                      | 
+...............................................| 
+320px - 600px  mobile phone = phone            |
+600px - 900px tablet-portrait = tab-port       |
+900px - 1200px tablet-landscape = tab-land     |
+1200px - 1800px tamanho normal do browser      |
+1800px + big desktop = big-desktop      
+xxpx/16px = xxem       |
+-----------------------------------------------°
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (min-width: 37.5rem) { 
+      @content
+    };
+  }
+
+  @if $breakpoint == tab-port {
+    @media (min-width: 56.2rem) /* 900px/16px */{
+      @content
+    };
+  }
+
+  @if $breakpoint == tab-land {
+    @media (min-width: 75rem) /* 1200px/16px */{
+      @content
+    };
+  }
+
+  @if $breakpoint == desktop {
+    @media (min-width: 87.5rem) /* 1200px/16px */{
+      @content
+    };
+  }
+
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5rem) /* 1800px/16px */{
+      @content
+    };
+  }
+}
