--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -26,23 +26,30 @@
       display: grid;
       gap: 2rem;    
       cursor: pointer;
+      padding: 1rem;
     
 
       h3 {
-        position: relative;         
+        position: relative;     
+        
+        @include respond(desktop) {
 
-        &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          top: 4rem;
-          left: 0;
-          background-image: url("/assets/img/Arrowlongagrossa.svg");
-          background-repeat: no-repeat ;
-          width: 2rem;
-          height: 2rem;
-          transition: all ease .3s;
+          &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 4rem;
+            left: 0;
+            background-image: url("/assets/img/Arrowlongagrossa.svg");
+            background-repeat: no-repeat ;
+            width: 2rem;
+            height: 2rem;
+            transition: all ease .3s;
+          }
+
         }
+
+        
       }      
     }
     &__cards:hover h3::after {
