--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -6,56 +6,52 @@
   gap: 6rem;
   place-items: center;
   @include container-size;
-  
 
   &__title {
     text-align: center;
     width: 100%;
-    padding-top: 4rem ;    
+    padding-top: 4rem;
     border-top: 1px solid $color-terciary;
   }
 
   &__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 4rem;
+    display: flex;
+    flex-wrap: wrap;
     
-    
-    
+    @include respond(phone) {
+      gap: 4rem;
+    }
+
     &__cards {
-      display: grid;
-      gap: 2rem;    
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      gap: 1rem;
       cursor: pointer;
-      padding: 1rem;
-    
+      padding: 1rem;   
+      flex: 1 1 200px;
 
       h3 {
-        position: relative;     
-        
-        @include respond(desktop) {
+        position: relative;
 
+        @include respond(desktop) {
           &::after {
-            content: "";
+            content: '';
             display: block;
             position: absolute;
             top: 4rem;
             left: 0;
-            background-image: url("/assets/img/Arrowlongagrossa.svg");
-            background-repeat: no-repeat ;
+            background-image: url('/assets/img/Arrowlongagrossa.svg');
+            background-repeat: no-repeat;
             width: 2rem;
             height: 2rem;
-            transition: all ease .3s;
+            transition: all ease 0.3s;
           }
-
         }
-
-        
-      }      
+      }
     }
     &__cards:hover h3::after {
       width: 22rem;
     }
   }
-
- 
 }
