--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,3 +1,5 @@
+@use 'mixin' as *;
+
 //Colors
 $color-primary: #F6F0F1;
 $color-secondary: #C39E9E;
@@ -19,7 +21,11 @@ $color-terciary: #121111;
   font: 400 2.2rem/1 'Jacques Francois', serif;
 }
 .defaut-font-secondary {
-  font: 400 2.5rem/1 'Inria Serif', serif;
+  font: 400 2.3rem/1 'Inria Serif', serif;
+
+  @include respond(phone) {
+    font-size: 2.8rem;  
+  }
 }
 
 //button
@@ -33,7 +39,10 @@ $color-terciary: #121111;
   text-transform: uppercase;
 }
 .menu-font-secondary {
-  font: 500 2.8rem/1.5 'Inria Serif', serif;
+  font: 500 2.2rem/1.5 'Inria Serif', serif;
+  @include respond(phone) {
+    font-size: 2.8rem;  
+  }
 }
 
 //titulos
